--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="envelope-wrapper">
             <div class="envelope">
                 <div class="letter" id="letter">
-                    <img src="img/1.png" alt="Page 1" style="width:100%; height:100%;">
+                    <img src="img/pre1.png" alt="Page 1" style="width:100%; height:100%;">
                 </div>
             </div>
             <img src="img/logo.png" alt="Logo" class="logo">
@@ -22,6 +22,7 @@
         <!-- Flipbook caché initialement -->
         <div id="flipbook" class="flipbook hidden">
             <div id="page1" class="page">
+                <img src="img/maries.jpg" alt="Image absolue" class="absolute-image">
                 <img src="img/1.png" alt="Page 1" style="width:100%; height:100%;">
             </div>
             <div id="page2" class="page">
